pushing all logos for index page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "austinakersPortfolio",
+  "name": "austinakers",
   "version": "1.0.0",
   "description": "My beautiful Nuxt.js project",
   "author": "Austin Akers",
