--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   {
     "id": 1,
     "projectName": "Cryptoplex Mangement (Private Repo)",
-    "projectScreenshot": "https://austinakers.com/assets/images/allstate-insurance-logo.png",
+    "projectScreenshot": "https://austinakers.com/assets/images/cryptoplex-logo400x400.jpg",
     "altImageText": "Image of the Cryptoplex Management landing page",
     "description": "Used the Quasar framework built on top of vue.js to build out a frontend that automates the financial tracking of your ethereum wallet.",
     "githubLink": "https://github.com/BboyAkers",
@@ -10,29 +10,38 @@
   },
   {
     "id": 2,
-    "projectName": "Solar System",
-    "projectScreenshot": "https://austinakers.com/assets/images/allstate-insurance-logo.png",
-    "altImageText": "Small version of the solar system",
-    "description": "Built a Solar Sytem using Babylon.js! The best part about programming is the ability to create and build whatever you want.",
+    "projectName": "Vuetify",
+    "projectScreenshot": "https://austinakers.com/assets/images/vuetifyLogo400x400.jpg",
+    "altImageText": "Image of the Open Source Project Vuetify Logo",
+    "description": "Contributing to building out the Beginners Guide. Currently working on the 'What is a CLI' part of the guide. Working on the CLI plugin tooling.",
     "githubLink": "https://github.com/BboyAkers/Solar-System",
-    "demoLink": ""
+    "demoLink": "https://vuetifyjs.com/en/"
   },
   {
     "id": 3,
     "projectName": "MetaMask Docs",
-    "projectScreenshot": "https://austinakers.com/assets/images/allstate-insurance-logo.png",
+    "projectScreenshot": "https://austinakers.com/assets/images/MetaMaskDocs400x400.jpg",
     "altImageText": "Image of the MeataMask Fox Logo",
     "description": "Contributed heavily to the re-design and development of the new metamask documentation.",
     "githubLink": "https://github.com/MetaMask/metamask-docs",
-    "demoLink": ""
+    "demoLink": "https://docs.metamask.io/"
   },
   {
     "id": 4,
     "projectName": "Metamask Test Dapp",
-    "projectScreenshot": "https://austinakers.com/assets/images/allstate-insurance-logo.png",
+    "projectScreenshot": "https://austinakers.com/assets/images/MetaMaskTestDapp400x400.jpg",
     "altImageText": "Image of the MeataMask Fox Logo",
-    "description": "Contributed re-design of the MetaMask Test Dapp. Currently building out the the ",
+    "description": "Contributed re-design of the MetaMask Test Dapp. Currently working on rewriting the contract code.",
     "githubLink": "https://github.com/MetaMask/test-dapp",
-    "demoLink": ""
+    "demoLink": "https://metamask.github.io/test-dapp/"
+  },
+  {
+    "id": 5,
+    "projectName": "Solar System",
+    "projectScreenshot": "https://austinakers.com/assets/images/SolarSystem400x400.jpg",
+    "altImageText": "Small version of the solar system",
+    "description": "Built a Solar Sytem using Babylon.js! The best part about programming is the ability to create and build whatever you want.",
+    "githubLink": "https://github.com/BboyAkers/Solar-System",
+    "demoLink": "https://austinakers.com/SolarSystem/"
   }
 ]
