--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "austin-akers-portfolio",
   "version": "1.0.0",
-  "description": "Web Development Portfolio",
+  "description": "Austin Akers Sr. UI Engineer Web Development Portfolio",
   "author": "Austin Akers",
   "private": true,
   "scripts": {
