--- a/data/projects.json
+++ b/data/projects.json
@@ -10,7 +10,7 @@
   },
   {
     "id": 2,
-    "projectName": "Vuetify Docs & CLI",
+    "projectName": "Vuetify Docs & Beginners Guide",
     "projectScreenshot": "https://austinakers.com/assets/images/vuetifyLogo400x400.jpg",
     "altImageText": "Image of the Open Source Project Vuetify logo",
     "description": "Contributing writing articles for the 'Beginners Guide' and contributing to the new markdown based documentation.",
