--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@nuxt/content": "^2.3.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^0.1.10"
   }
 }
